# keepsake

./: .clang-format  .gitmodules  aabb.h  assertion.cpp  assertion.h  barray.h  bsdf.cpp  bsdf.h  camera.cpp  camera.h  colormap.cpp  colormap.h  config.cpp  config.h  distrib.cpp  distrib.h  embree_util.cpp  embree_util.h  file_util.h  fresnel.h  geometry.cpp  geometry.h  hash.h  image_util.cpp  image_util.h  keyframe.cpp  keyframe.h  light.cpp  light.h  log_util.cpp  log_util.h  material.cpp  material.h  maths.h  memory_util.cpp  memory_util.h  mesh_asset.cpp  mesh_asset.h  microfacet.h  namespace.h  (+39 more)
cuda/: aabb.cu  aabb.cuh  api_error.h  array.cuh  basic.cuh  camera.cpp  camera.cu  camera.cuh  colormap.cu  colormap.cuh  cuda_parallel_kd_tree.cpp  cuda_parallel_kd_tree.cu  cuda_parallel_kd_tree.h  cuda_parallel_kd_tree_test.cpp  device_util.cuh  error.h  hash.cuh  indirect_span.cuh  math.cuh  memory.cu  memory.cuh  memory_low_level.cpp  memory_low_level.cu  memory_low_level.cuh  memory_low_level.h  optional.cuh  parallel_kd_tree.cpp  parallel_kd_tree.cu  parallel_kd_tree.cuh  parallel_kd_tree.h  parallel_kd_tree_test.cpp  ray.cu  ray.cuh  ray_tri.cuh  rng.cuh  sbvh.cu  sbvh.cuh  sobol.cu  sobol.cuh  span.cuh  (+6 more)
gpu/: hash_table.h  ksvk.cpp  ksvk.h  light.cpp  light.h  optimizer.cpp  optimizer.h  scene.cpp  scene.h  small_pt.cpp  small_pt.h  vk_cuda_interop.cpp  vk_cuda_interop.h
gpu/shaders/: adam.slang  alias_table.slang  camera.slang  common.slang  gpu_small_pt.slang  hash_table.slang  ks.slang  light.slang  material.slang  pixel_filter.slang  rng.slang  scene.slang
test/: .gitignore  CMakeLists.txt  main.cpp
vulkan/: ksvk.cpp  ksvk.h
yui/: yui.cpp  yui.h
